<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_menu_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/news_order_by_labels"
        android:entryValues="@array/news_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_location_default_value"
        android:entries="@array/news_location_labels"
        android:entryValues="@array/news_location_values"
        android:key="@string/settings_location_key"
        android:title="@string/settings_location_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_search_default_value"
        android:inputType="textNoSuggestions"
        android:key="@string/settings_search_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_search_label" />

</PreferenceScreen>

